// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log chain tag 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "%cTEST%cinfo%ctag2",
      "background: linear-gradient(#4D4D4D, #5D5D5D); color: #fff; padding: 2px 4px; border-top-left-radius: 4px; border-bottom-left-radius: 4px;",
      "background: #4CAF50; color: #fff; padding: 2px 4px;",
      "background: hsl(335.68956412002444, 70%, 53%); color: #fff; padding: 2px 2px; border-top-right-radius: 4px; border-bottom-right-radius: 4px;",
      "foo",
      "bar",
      42,
      Object {
        "foo": "bar",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Log levels 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "%ctrace",
      "background: #000; color: #fff; padding: 2px 4px;",
      "test",
    ],
    Array [
      "%cdebug",
      "background: #9C27B0; color: #fff; padding: 2px 4px;",
      "test",
    ],
    Array [
      "%cinfo",
      "background: #4CAF50; color: #fff; padding: 2px 4px;",
      "test",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
    Object {
      "isThrow": false,
      "value": undefined,
    },
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Log levels 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "%cwarn",
      "background: #FF9800; color: #fff; padding: 2px 4px;",
      "test",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Log levels 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "%cerror",
      "background: #F44336; color: #fff; padding: 2px 4px;",
      "test",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Log no tag 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "%cTEST%cinfo",
      "background: linear-gradient(#4D4D4D, #5D5D5D); color: #fff; padding: 2px 4px; border-top-left-radius: 4px; border-bottom-left-radius: 4px;",
      "background: #4CAF50; color: #fff; padding: 2px 4px;",
      "foo",
      "bar",
      42,
      Object {
        "foo": "bar",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Log noop log 1`] = `[MockFunction]`;

exports[`Log noop log 2`] = `[MockFunction]`;

exports[`Log noop log 3`] = `[MockFunction]`;

exports[`Log one tag 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "%cTEST%cinfo%ctag",
      "background: linear-gradient(#4D4D4D, #5D5D5D); color: #fff; padding: 2px 4px; border-top-left-radius: 4px; border-bottom-left-radius: 4px;",
      "background: #4CAF50; color: #fff; padding: 2px 4px;",
      "background: hsl(342.53580424003303, 70%, 53%); color: #fff; padding: 2px 2px; border-top-right-radius: 4px; border-bottom-right-radius: 4px;",
      "foo",
      "bar",
      42,
      Object {
        "foo": "bar",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Log with name 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "%cTEST%cinfo",
      "background: linear-gradient(#4D4D4D, #5D5D5D); color: #fff; padding: 2px 4px; border-top-left-radius: 4px; border-bottom-left-radius: 4px;",
      "background: #4CAF50; color: #fff; padding: 2px 4px;",
      "foo",
      "bar",
      42,
      Object {
        "foo": "bar",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Log without name 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "%cinfo",
      "background: #4CAF50; color: #fff; padding: 2px 4px;",
      "foo",
      "bar",
      42,
      Object {
        "foo": "bar",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
